<resources>
    <string name="app_name">Remember</string>
    // Strings botones
    <string name="ok">Aceptar</string>
    <string name="cancel">Cancelar</string>
    // Strings dialogo borrar
    <string name="mensaje_confirm_borrar">¿Seguro que quieres borrar esta nota?</string>
    <string name="etiqueta_dialogo_borrar">Eliminar: </string>
    // nota
    <string name="nota">Nota</string>
    <string name="titulo">Titulo</string>
    <string name="adNota">Añadir Nota</string>
    <string name="addLista">Añadir Lista</string>
    <string name="addCategoria">Añadir Categoria</string>
    <string name="addFoto">Añadir Foto</string>
    <string name="navigation_drawer_open">Abrir barra de navegacion</string>
    <string name="navigation_drawer_close">Cerrar barra de navegacion</string>
    <string name="contenido">Contenido</string>
    <string name="categorias">Elige una categoria</string>
    <string name="trabajo">Trabajo</string>
    <string name="compras">Compras</string>
    <string name="ocio">Ocio</string>
    <string name="otros">Otros</string>
    <string name="todos">Todos</string>
    <string name="menuCamara">Elige una imagen</string>
    <string name="foto">Sacar una foto</string>
    <string name="galeria">Elegir de la galeria</string>

    <string name="action_settings">Settings</string>
</resources>
