<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <group android:checkableBehavior="single"
        android:actionMenuTextColor="@color/textoMenu">
        <item
            android:id="@+id/nav_trabajo"
            android:icon="@drawable/ic_card_travel_black_24dp"
            android:title="@string/trabajo" />
        <item
            android:id="@+id/nav_compras"
            android:icon="@drawable/ic_local_grocery_store_black_24dp"
            android:title="@string/compras" />
        <item
            android:id="@+id/nav_ocio"
            android:icon="@drawable/ic_ocio"
            android:title="@string/ocio" />
        <item
        android:id="@+id/nav_otros"
        android:icon="@drawable/ic_otros"
        android:title="@string/otros"
        />
        <item
            android:id="@+id/nav_todo"
            android:icon="@drawable/ic_todos"
            android:title="@string/todos"
            />
    </group>

</menu>
